# agentic-vision

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  social-release-broadcast.yml
crates/agentic-vision/: Cargo.toml
crates/agentic-vision-cli/: Cargo.toml
crates/agentic-vision-cli/src/: main.rs
crates/agentic-vision-ffi/: Cargo.toml
crates/agentic-vision-mcp/: Cargo.toml
crates/agentic-vision-mcp/src/: ghost_bridge.rs
crates/agentic-vision-mcp/src/protocol/: handler.rs
crates/agentic-vision-mcp/src/session/: manager.rs  mod.rs  workspace.rs
crates/agentic-vision-mcp/src/tools/: invention_forensics.rs  invention_grounding.rs  invention_prediction.rs  invention_synthesis.rs  invention_temporal.rs  mod.rs  registry.rs  vision_compact.rs  vision_grammar.rs  vision_perception.rs  vision_query.rs  vision_workspace_add.rs  vision_workspace_compare.rs  vision_workspace_create.rs  vision_workspace_list.rs  vision_workspace_query.rs
crates/agentic-vision-mcp/src/transport/: stdio.rs
crates/agentic-vision-mcp/tests/: edge_cases.rs  edge_cases_inventions.rs  perception_revolution_tests.rs  phase0_stress.rs  phase1_v2_stress.rs
crates/agentic-vision/benches/: mcp_bench.rs
crates/agentic-vision/src/: bridges.rs  contracts.rs  lib.rs  storage.rs
crates/agentic-vision/src/cache/: invalidation.rs  lru.rs  metrics.rs  mod.rs
crates/agentic-vision/src/cli/: commands.rs  repl.rs  repl_commands.rs  repl_complete.rs
crates/agentic-vision/src/metrics/: audit.rs  conservation.rs  mod.rs  tokens.rs
crates/agentic-vision/src/perception/: cache.rs  dom.rs  drift.rs  grammar.rs  mod.rs  significance.rs  types.rs
crates/agentic-vision/src/query/: budget.rs  delta.rs  intent.rs  mod.rs  pagination.rs
crates/agentic-vision/tests/: perception_tests.rs  stress_tests.rs
docs/: command-surface.md  file-format.md  quickstart.md  runtime-install-sync.md
docs/public/: LIMITATIONS.md  api-reference.md  architecture.md  benchmarks.md  command-surface.md  concepts.md  experience-with-vs-without.md  faq.md  implementation-2026-02-22.md  installation.md  integration-guide.md  mcp-tools.md  overview.md  quickstart.md  runtime-install-sync.md  sister.manifest.json
npm/wasm/: Cargo.toml
python/: pyproject.toml
scripts/: check-canonical-sister.sh  check-install-commands.sh  install.sh  publish.sh  test-primary-problems.sh
