[workspace]
resolver = "2"
members = ["crates/agentic-vision", "crates/agentic-vision-mcp"]
exclude = ["runtime", "npm/wasm"]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-vision"
homepage = "https://agentralabs.tech"
authors = ["Omoshola Owolabi"]
