[package]
name = "agentic-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core vision library for AgenticVision — image capture, embedding, similarity, and visual memory"
readme = "README.md"
keywords = ["vision", "embedding", "clip", "image", "ai"]
categories = ["multimedia::images", "science"]
exclude = [".DS_Store"]

[lib]
name = "agentic_vision"
path = "src/lib.rs"

[[bin]]
name = "avis"
path = "src/bin/avis.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete", "dep:rustyline", "dep:chrono"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
image = "0.25"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
memmap2 = "0.9"
tracing = "0.1"
base64 = "0.22"

# CLI (optional, behind "cli" feature)
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
rustyline = { version = "14", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
