[package]
name = "agentic-vision-wasm"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "WASM bindings for agentic-vision — cosine similarity, visual memory types, and .avis file I/O"
repository = "https://github.com/agentralabs/agentic-vision"
homepage = "https://agentralabs.tech"
authors = ["Omoshola Owolabi"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0"

[profile.release]
opt-level = "s"
lto = true
